--- a/src/controls/Link/Component/styles.css
+++ b/src/controls/Link/Component/styles.css
@@ -3,7 +3,7 @@
   align-items: center;
   margin-bottom: 6px;
   position: relative;
-  flex-wrap: wrap
+  flex-wrap: wrap;
 }
 .rdw-link-dropdown {
   width: 50px;
@@ -20,6 +20,7 @@
   position: absolute;
   top: 35px;
   left: 5px;
+  right: auto;
   display: flex;
   flex-direction: column;
   width: 235px;
